--- a/src/calendar/calendar.html
+++ b/src/calendar/calendar.html
@@ -1,24 +1,24 @@
 <ion-grid>
-  <ion-row justify-content-center>
-    <ion-col col-auto (click)="back()">
-      <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
-    </ion-col>
-    <ion-col col-auto>
-      <div>{{displayYear}} {{displayMonth + 1}} </div>
-    </ion-col>
-    <ion-col col-auto (click)="forward()">
-      <ion-icon ios="ios-arrow-forward" md="md-arrow-forward"></ion-icon>
-    </ion-col>
-  </ion-row>
+    <ion-row justify-content-center>
+        <ion-col col-2 col-auto (click)="back()" text-left>
+            <ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon>
+        </ion-col>
+        <ion-col col-8 col-auto text-center>
+            <div>{{displayMonth + 1}} {{displayYear}}</div>
+        </ion-col>
+        <ion-col col-2 col-auto (click)="forward()" text-right>
+            <ion-icon ios="ios-arrow-forward" md="md-arrow-forward"></ion-icon>
+        </ion-col>
+    </ion-row>
 
-  <ion-row>
-    <ion-col class="center calendar-header-col" *ngFor="let head of weekHead">{{head}}</ion-col>
-  </ion-row>
+    <ion-row>
+        <ion-col class="center calendar-header-col" *ngFor="let head of weekHead">{{head}}</ion-col>
+    </ion-row>
 
-  <ion-row class="calendar-row" *ngFor="let week of weekArray;let i = index">
-    <ion-col class="center calendar-col" (click)="daySelect(day,i,j)" *ngFor="let day of week;let j = index" [ngClass]="[day.isThisMonth?'this-month':'not-this-month',day.isToday?'today':'',day.isSelect?'select':'']">
-      {{day.date}}
-    </ion-col>
-  </ion-row>
+    <ion-row class="calendar-row" *ngFor="let week of weekArray;let i = index">
+        <ion-col class="center calendar-col" (click)="daySelect(day,i,j)" *ngFor="let day of week;let j = index" [ngClass]="[day.isThisMonth?'this-month':'not-this-month',day.isToday?'today':'',day.isSelect?'select':'']">
+            {{day.date}}
+        </ion-col>
+    </ion-row>
 
 </ion-grid>
